--- a/package.json
+++ b/package.json
@@ -8,5 +8,9 @@
     "colors": "^1.4.0",
     "express": "^4.18.1",
     "http": "^0.0.1-security"
+  },
+
+  "scripts": {
+    "start": "node app.js"
   }
 }
