--- a/package.json
+++ b/package.json
@@ -1,15 +1,16 @@
 {
   "name": "highframe-backend",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "app.js",
   "author": "Tdroid2.0",
   "license": "MIT",
   "dependencies": {
+    "body-parse": "^0.1.0",
     "colors": "^1.4.0",
     "express": "^4.18.1",
-    "http": "^0.0.1-security"
+    "http": "^0.0.1-security",
+    "mongoose": "^6.4.0"
   },
-
   "scripts": {
     "start": "node app.js"
   }
